# youku-upload

./: .gitignore  README.md  build_wheel_file.sh  command.py  pyproject.toml  requirements.txt  setup.py
youku/: __init__.py  youku_upload.py
youku_upload/: __init__.py  command.py
